# kirbyware.io

./: .gitignore  README.md  drain_all.sh  uncordon_all.sh
.circleci/: config.yml
homelan/: shutdown.md
homelan/1-xcp-ng/: 2-setup-create-k8-cluster.md
homelan/3-setup-traefik/: cert-manager-issuer-local-kirbyware-com-staging.yaml  certificate-kirbyware-com-production.yaml  certificate-kirbyware-com-staging.yaml  certificate-local-kirbyware-com-staging.yaml  certificate-test-kirbyware-com-production.yaml  local-values.yaml  readme.md
homelan/4-whoami-test/: readme.md  whoami-ingress-http.yaml  whoami-ingress-route.yaml  whoami-my-values.yaml  whoami-service.yaml
homelan/5-openebs/: 2-readme-setup-nfs.md  cstor-csi-disk.yaml  nfs-volume.yaml  readme.md  sample-app-pvc.yaml  sample-app.yaml
homelan/6-kube-dashboard/: cluster-role-binfding.yaml  dashboard-my-values.yaml  readme.md  service-account-user.yaml
homelan/xcp-ng/: base-servers.md  calico-config.yaml  metallb-helm-chart-values-default.yaml  metallb-helm-chart-values-my.yaml  metallb-ipaddresspool.yaml  readme.md  setup-metallb.md
learn/ai-prompts/: openAI-apikey.yaml
old/google-cloud/: readme.md
prod/cloudflare-lb/: readme.md
prod/google-cloud/: readme.md  setup-cluster.md  setup-environment.md  setup-google-ssl.md  setup-traefik.md
prod/vultr/: README.md
projects/AwesomeProject/: App.js  package-lock.json  package.json  readme.md
projects/XenAPI/k8-python/: mark.py  pyproject.toml
projects/igniteDemo/: readme.md
projects/learn-react/: readme.md
projects/moraka/: README.md  app.json  (+3 more)
(+255 files in other folders)
